--- a/проджект четатам/style/style.css
+++ b/проджект четатам/style/style.css
@@ -18,10 +18,21 @@ a{
 .container{
     width: 1200px;
     margin: 0 auto;
+    
     display: flex;
     align-items: center;
     justify-content: space-between;
     border-bottom: 2px solid #c9c9c9;
+}
+
+.container-fill{
+    width: auto;
+    margin: 0PX;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: rgb(240, 240, 240);
+    
 }
 
 .heroblock h1{
@@ -46,4 +57,31 @@ a{
 
 .pictures img{
     margin: 10px;
+}
+
+.gallery {
+    width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 2px solid #c9c9c9;
+    
+    margin-top: 20px ;
+}
+
+.gallery-item {
+    text-align: center;
+}
+
+.gallery-item img {
+    width: 250px; 
+    height: auto; 
+    border-radius: 15px;
+}
+
+.caption {
+    margin: 10px 25px 20px;
+    font-size: 16px;
+    color: #2b2b2b;
 }
